full keyboard controls on display

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -10,7 +10,7 @@
   <body>
     <div id="overlay">
       <div class="overlay-body">
-        <div class="overlay-section">
+        <!-- <div class="overlay-section">
           <div class="title">Subscriptions</div>
           <div class="channels">
             <% for(var i=0;i < 5; i++) { %>
@@ -42,7 +42,7 @@
               </div>
             <% } %>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <div id="player"></div>
