mapping socket events to display nav events

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -9,41 +9,7 @@
   </head>
   <body>
     <div id="overlay">
-      <div class="overlay-body">
-        <!-- <div class="overlay-section">
-          <div class="title">Subscriptions</div>
-          <div class="channels">
-            <% for(var i=0;i < 5; i++) { %>
-              <div class="channel">
-                <div class="thumbnail"></div>
-                <div class="name">Lanzo</div>
-              </div>
-            <% } %>
-          </div>
-        </div>
-        <div class="overlay-section">
-          <div class="title">Followed</div>
-          <div class="channels">
-            <% for(var i=0;i < 5; i++) { %>
-              <div class="channel">
-                <div class="thumbnail"></div>
-                <div class="name">Lanzo</div>
-              </div>
-            <% } %>
-          </div>
-        </div>
-        <div class="overlay-section">
-          <div class="title">Featured</div>
-          <div class="channels">
-            <% for(var i=0;i < 5; i++) { %>
-              <div class="channel">
-                <div class="thumbnail"></div>
-                <div class="name">Lanzo</div>
-              </div>
-            <% } %>
-          </div>
-        </div> -->
-      </div>
+      <div class="overlay-body"></div>
     </div>
     <div id="player"></div>
   </body>
