--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -3,8 +3,38 @@
     <title>Controller | Twitch Television</title>
     <script src="/socket.io.js"></script>
     <script src="/controller.js"></script>
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/controller.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet" />
   </head>
   <body>
-    this is the controller
+    <div id="controller">
+      <div>
+        Current:
+      </div>
+      <div class="volume">
+        <input class="volume-input" type="range" />
+      </div>
+      <div class="playback">
+        <button class="playback-control">PAUSE</button>
+      </div>
+      <div class="guide">
+        <button class="guide-control">GUIDE</button>
+      </div>
+      <div class="nav">
+        <div class="nav-section">
+          <button class="nav-left"> left </button>
+        </div>
+        <div class="nav-section middle">
+          <button class="nav-up"> up </button>
+          <button class="nav-enter"> o </button>
+          <button class="nav-down"> down </button>
+        </div>
+        <div class="nav-section">
+          <button class="nav-right"> right </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
