--- a/static/controller.css
+++ b/static/controller.css
@@ -3,7 +3,10 @@ html {
 }
 
 #controller {
-
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
 }
 
 button {
@@ -28,7 +31,7 @@ button:active {
 
 .nav {
   display: flex;
-  height: 200px;
+  height: 300px;
 }
 
 .nav-section {
@@ -48,19 +51,39 @@ button:active {
 .nav-section button {
   width: 100%;
   height: 100%;
+  font-size: 36px;
+}
+
+.nav-section.middle button.nav-enter {
+  font-size: 26px;
+}
+
+.volume {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
+  padding-left: 12px;
+}
+
+.volume svg {
+  display: inline-block;
+  min-width: 30px;
 }
 
 .volume-input {
-  width: calc(100% - 8px);
+  /* width: calc(100% - 8px); */
+  flex: 1;
 }
+
 
 
 input[type=range] {
   -webkit-appearance: none;
   margin: 18px 0;
-  width: calc(100% - 8px);
-  display: block;
-  margin: 24px auto;
+  /* width: calc(100% - 8px); */
+  display: inline-block;
+  margin: 24px 12px;
 }
 input[type=range]:focus {
   outline: none;
@@ -73,13 +96,13 @@ input[type=range]::-webkit-slider-runnable-track {
   border: 0.2px solid #CFD8DC;
 }
 input[type=range]::-webkit-slider-thumb {
-  height: 24px;
-  width: 24px;
+  height: 36px;
+  width: 36px;
   background: #6441A4;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -10px;
+  margin-top: -18px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #367ebd;
+  /* background: #367ebd; */
 }
