--- a/views/controller.ejs
+++ b/views/controller.ejs
@@ -5,8 +5,9 @@
     <script src="/controller.js"></script>
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/controller.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet" />
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
   </head>
   <body>
     <div id="controller">
@@ -14,6 +15,7 @@
         Current:
       </div>
       <div class="volume">
+        <i class="fas fa-volume-up"></i>
         <input class="volume-input" type="range" />
       </div>
       <div class="playback">
@@ -24,15 +26,15 @@
       </div>
       <div class="nav">
         <div class="nav-section">
-          <button class="nav-left"> left </button>
+          <button class="nav-left"> <i class="fas fa-chevron-left"></i> </button>
         </div>
         <div class="nav-section middle">
-          <button class="nav-up"> up </button>
-          <button class="nav-enter"> o </button>
-          <button class="nav-down"> down </button>
+          <button class="nav-up"> <i class="fas fa-chevron-up"></i> </button>
+          <button class="nav-enter"> <i class="far fa-circle"></i> </button>
+          <button class="nav-down"> <i class="fas fa-chevron-down"></i> </button>
         </div>
         <div class="nav-section">
-          <button class="nav-right"> right </button>
+          <button class="nav-right"> <i class="fas fa-chevron-right"></i> </button>
         </div>
       </div>
     </div>
