--- a/static/controller.css
+++ b/static/controller.css
@@ -106,3 +106,37 @@ input[type=range]::-webkit-slider-thumb {
 input[type=range]:focus::-webkit-slider-runnable-track {
   /* background: #367ebd; */
 }
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-size: 32px;
+}
+
+.label {
+  line-height: 2;
+}
+
+.submit {
+  font-size: 26px;
+  margin: 12px;
+}
+
+#room {
+  font-size: 32px;
+  text-align: center;
+  font-family: 'Roboto Condensed', sans-serif;
+}
