sockets! are fun!

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/global.css" />
   </head>
   <body>
+    <div class="controller-overlay"></div>
     <div id="overlay">
       <div class="overlay-body"></div>
     </div>
