--- a/static/display.css
+++ b/static/display.css
@@ -1,5 +1,6 @@
 #overlay {
   position: absolute;
+  z-index: 2;
   width: 100%;
   height: 100%;
   opacity: 0.0;
@@ -42,4 +43,19 @@
   width: 160px;
   height: 90px;
   background-color: gray;
+}
+
+.controller-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  z-index: 3;
+  opacity: 0.0;
+  transition: opacity 0.3s ease;
+}
+
+.controller-overlay.active {
+  opacity: 1.0;
 }
